# godot-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: bump-and-release.yml  ci.yml
docs/: CONTRIBUTING.md  implementation-plan.html  implementation-plan.md  proposal.html  proposal.md
plugin/addons/godot_ai/: client_configurator.gd  connection.gd  dispatcher.gd  mcp_dock.gd  plugin.cfg  plugin.gd
plugin/addons/godot_mcp_studio/: client_configurator.gd  connection.gd  plugin.cfg  plugin.gd
script/: ci-godot-tests  ci-quit-test  setup-dev
src/godot_ai/: __init__.py  __main__.py  server.py
src/godot_ai/godot_client/: client.py
src/godot_ai/handlers/: editor.py  filesystem.py  resource.py  script.py
src/godot_ai/protocol/: errors.py
src/godot_ai/sessions/: registry.py
src/godot_ai/tools/: editor.py  filesystem.py  input_map.py  node.py  resource.py  scene.py  script.py  testing.py
src/godot_ai/transport/: websocket.py
src/godot_mcp_studio/: __init__.py  __main__.py  server.py
src/godot_mcp_studio/godot_client/: client.py
test_project/: cyberpunk_hud.gd  cyberpunk_hud.tscn  main.tscn  project.godot
test_project/addons/: godot_ai  godot_mcp_studio
test_project/tests/: test_editor.gd  test_editor.gd.uid  test_filesystem.gd  test_node.gd  test_node.gd.uid  test_resource.gd  test_scene.gd  test_scene.gd.uid  test_script.gd
tests/: conftest.py
tests/integration/: test_mcp_tools.py  test_websocket.py
tests/unit/: test_editor_focus_refocus.py  test_protocol.py  test_runtime_handlers.py  test_session_registry.py
(+28 files in other folders)
